<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_Convert_INT16" Id="{1b3dd528-f7b6-4996-b4c1-d6ce0295355f}">
    <Declaration><![CDATA[TYPE U_Convert_INT16 :
UNION
	nValue		:INT;
	arrByte		:ARRAY[1..2] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>